==> cvetaevvitaliy/NRF52840_SSD1306/ssd1306/ssd1306.c <==
#include "ssd1306.h"
#include "nrf_delay.h"
#define TWI_INSTANCE_ID     0

SSD1306_COLOR ssd1306_GetColor(void)
{
	return SSD1306.Color;
}

void ssd1306_SetColor(SSD1306_COLOR color)
{
	SSD1306.Color = color;
}

bool ssd1306_Init(void) {

    // Wait for the screen to boot
    nrf_delay_ms(300);

    /* Init LCD */
    ssd1306_WriteCommand(DISPLAYOFF);
    ssd1306_WriteCommand(SETDISPLAYCLOCKDIV);
    ssd1306_WriteCommand(0xF0); // Increase speed of the display max ~96Hz
    ssd1306_WriteCommand(SETMULTIPLEX);
    ssd1306_WriteCommand(height() - 1);
    ssd1306_WriteCommand(SETDISPLAYOFFSET);
    ssd1306_WriteCommand(0x00);
    ssd1306_WriteCommand(SETSTARTLINE);
    ssd1306_WriteCommand(CHARGEPUMP);
    ssd1306_WriteCommand(0x14);
    ssd1306_WriteCommand(MEMORYMODE);
    ssd1306_WriteCommand(0x00);
    ssd1306_WriteCommand(SEGREMAP);
    ssd1306_WriteCommand(COMSCANINC);
    ssd1306_WriteCommand(SETCOMPINS);

    if (display_geometry == GEOMETRY_128_64) {
        ssd1306_WriteCommand(0x12);
    } else if (display_geometry == GEOMETRY_128_32) {
        ssd1306_WriteCommand(0x02);
    }

    ssd1306_WriteCommand(SETCONTRAST);

    if (display_geometry == GEOMETRY_128_64) {
        ssd1306_WriteCommand(0xCF);
    } else if (display_geometry == GEOMETRY_128_32) {
        ssd1306_WriteCommand(0x8F);
    }

    ssd1306_WriteCommand(SETPRECHARGE);
    ssd1306_WriteCommand(0xF1);
    ssd1306_WriteCommand(SETVCOMDETECT); //0xDB, (additionally needed to lower the contrast)
    ssd1306_WriteCommand(0x40);            //0x40 default, to lower the contrast, put 0
    ssd1306_WriteCommand(DISPLAYALLON_RESUME);
    ssd1306_WriteCommand(NORMALDISPLAY);
    ssd1306_WriteCommand(0x2e);            // stop scroll
    ssd1306_WriteCommand(DISPLAYON);

    // Set default values for screen object
    SSD1306.CurrentX = 0;
    SSD1306.CurrentY = 0;
    SSD1306.Color = White;

    // Clear screen
    ssd1306_Clear();

    // Flush buffer to screen
    ssd1306_UpdateScreen();

    return true;
}

void ssd1306_Fill() {
    /* Set memory */
    uint16_t i;

    for (i = 0; i < sizeof(SSD1306_Buffer); i++) {
        SSD1306_Buffer[i] = (SSD1306.Color == Black) ? 0x00 : 0xFF;
    }
}

void ssd1306_DrawPixel(uint8_t x, uint8_t y) {
    SSD1306_COLOR color = SSD1306.Color;

    if (x >= ssd1306_GetWidth() || y >= ssd1306_GetHeight()) {
        // Don't write outside the buffer
        return;
    }

    // Check if pixel should be inverted
    if (SSD1306.Inverted) {
        color = (SSD1306_COLOR) !color;
    }

    // Draw in the right color
    if (color == White) {
        SSD1306_Buffer[x + (y / 8) * width()] |= 1 << (y % 8);
    } else {
        SSD1306_Buffer[x + (y / 8) * width()] &= ~(1 << (y % 8));
    }
}

void ssd1306_DrawProgressBar(uint16_t x, uint16_t y, uint16_t width, uint16_t height, uint8_t progress) {
    uint16_t radius = height / 2;
    uint16_t xRadius = x + radius;
    uint16_t yRadius = y + radius;
    uint16_t doubleRadius = 2 * radius;
    uint16_t innerRadius = radius - 2;

    ssd1306_SetColor(White);
    ssd1306_DrawCircleQuads(xRadius, yRadius, radius, 0b00000110);
    ssd1306_DrawHorizontalLine(xRadius, y, width - doubleRadius + 1);
    ssd1306_DrawHorizontalLine(xRadius, y + height, width - doubleRadius + 1);
    ssd1306_DrawCircleQuads(x + width - radius, yRadius, radius, 0b00001001);

    uint16_t maxProgressWidth = (width - doubleRadius + 1) * progress / 100;

    ssd1306_FillCircle(xRadius, yRadius, innerRadius);
    ssd1306_FillRect(xRadius + 1, y + 2, maxProgressWidth, height - 3);
    ssd1306_FillCircle(xRadius + maxProgressWidth, yRadius, innerRadius);
}

void ssd1306_SetCursor(uint8_t x, uint8_t y) {
    SSD1306.CurrentX = x;
    SSD1306.CurrentY = y;
}

static void ssd1306_WriteCommand(uint8_t command) {

    uint8_t buf[2] = {0x00, command};
    nrf_drv_twi_tx(&SSD1306.oled_twi_master, SSD1306_I2C_ADDR, buf, 2, false);
}

static void ssd1306_WriteData(uint8_t* data, uint16_t size) {

    uint8_t buf[size + 1];
    buf[0] = 0x40;
    memcpy(buf + 1, data, size);
    nrf_drv_twi_tx(&SSD1306.oled_twi_master, SSD1306_I2C_ADDR, buf, size+1, false);
    
}
