==> KulichenkoViacheslav/STM32Labs/MCU_SYSTEM/Components/SSD1306/src/ssd1306.c <==
#include "inc/ssd1306.h"
#define SSD1306_BUFFER_SIZE		(SSD1306_WIDTH * SSD1306_HEIGHT / 8)
#define CHARGEPUMP 			    0x8D
#define COLUMNADDR 			    0x21
#define COMSCANDEC 			    0xC8
#define COMSCANINC 			    0xC0
#define DISPLAYALLON 		    0xA5
#define DISPLAYALLON_RESUME 0xA4
#define DISPLAYOFF 			    0xAE
#define DISPLAYON 			    0xAF
#define EXTERNALVCC 		    0x1
#define INVERTDISPLAY 		  0xA7
#define MEMORYMODE 			    0x20
#define NORMALDISPLAY 		  0xA6
#define PAGEADDR 			      0x22
#define SEGREMAP 			      0xA0
#define SETCOMPINS 			    0xDA
#define SETCONTRAST 		    0x81
#define SETDISPLAYCLOCKDIV 	0xD5
#define SETDISPLAYOFFSET 	  0xD3
#define SETHIGHCOLUMN 		  0x10
#define SETLOWCOLUMN 		    0x00
#define SETMULTIPLEX 		    0xA8
#define SETPRECHARGE 		    0xD9
#define SETSEGMENTREMAP 	  0xA1
#define SETSTARTLINE		    0x40
#define SETVCOMDETECT 		  0xDB
#define SWITCHCAPVCC 		    0x2
#define SWAP_INT16_T(a, b) { int16_t t = a; a = b; b = t; }

ssd1306_color_e_t ssd1306_GetColor(void)
{
	return lcd_oled.color;
}

void ssd1306_SetColor(ssd1306_color_e_t color)
{
	lcd_oled.color = color;
}

bool ssd1306_Init(void)
{
	/* Check if LCD connected to I2C */
	if (HAL_I2C_IsDeviceReady(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 5, 1000) != HAL_OK)
	{
		lcd_oled.initialized = false;
		/* Return false */
		return false;
	}

	// Wait for the screen to boot
	HAL_Delay(100);

	/* Init LCD */
	ssd1306_WriteCommand(DISPLAYOFF);
	ssd1306_WriteCommand(SETDISPLAYCLOCKDIV);
	ssd1306_WriteCommand(0xF0); // Increase speed of the display max ~96Hz
	ssd1306_WriteCommand(SETMULTIPLEX);
	ssd1306_WriteCommand(ssd1306_GetHeight() - 1);
	ssd1306_WriteCommand(SETDISPLAYOFFSET);
	ssd1306_WriteCommand(0x00);
	ssd1306_WriteCommand(SETSTARTLINE);
	ssd1306_WriteCommand(CHARGEPUMP);
	ssd1306_WriteCommand(0x14);
	ssd1306_WriteCommand(MEMORYMODE);
	ssd1306_WriteCommand(0x00);
	ssd1306_WriteCommand(SEGREMAP);
	ssd1306_WriteCommand(COMSCANINC);
	ssd1306_WriteCommand(SETCOMPINS);

	if (display_geometry == GEOMETRY_128_64)
	{
	  ssd1306_WriteCommand(0x12);
	}
	else if (display_geometry == GEOMETRY_128_32)
	{
	  ssd1306_WriteCommand(0x02);
	}

	ssd1306_WriteCommand(SETCONTRAST);

	if (display_geometry == GEOMETRY_128_64)
	{
	  ssd1306_WriteCommand(0xCF);
	}
	else if (display_geometry == GEOMETRY_128_32)
	{
	  ssd1306_WriteCommand(0x8F);
	}

	ssd1306_WriteCommand(SETPRECHARGE);
	ssd1306_WriteCommand(0xF1);
	ssd1306_WriteCommand(SETVCOMDETECT); //0xDB, (additionally needed to lower the contrast)
	ssd1306_WriteCommand(0x40);	        //0x40 default, to lower the contrast, put 0
	ssd1306_WriteCommand(DISPLAYALLON_RESUME);
	ssd1306_WriteCommand(NORMALDISPLAY);
	ssd1306_WriteCommand(0x2e);            // stop scroll
	ssd1306_WriteCommand(DISPLAYON);

	// Set default values for screen object
	lcd_oled.currentX = 0;
	lcd_oled.currentY = 0;
	lcd_oled.color = Black;

	// Clear screen
	ssd1306_Clear();

	// Flush buffer to screen
	ssd1306_UpdateScreen();

	lcd_oled.initialized = true;

	/* Return OK */
	return true;
}

void ssd1306_Fill(ssd1306_color_e_t color)
{
	/* Set memory */
	uint32_t i;

	for(i = 0; i < SSD1306_BUFFER_SIZE; i++)
	{
		lcd_oled_buffer[i] = (color == Black) ? 0x00 : 0xFF;
	}
}

void ssd1306_DrawPixel(uint8_t x, uint8_t y, ssd1306_color_e_t color)
{

	if (x >= ssd1306_GetWidth() || y >= ssd1306_GetHeight())
	{
		// Don't write outside the buffer
		return;
	}

	// Check if pixel should be inverted
	if (lcd_oled.inverted)
	{
		color = (ssd1306_color_e_t) !color;
	}

	// Draw in the right color
	if (color == White)
	{
		lcd_oled_buffer[x + (y / 8) * ssd1306_GetWidth()] |= 1 << (y % 8);
	}
	else
	{
		lcd_oled_buffer[x + (y / 8) * ssd1306_GetWidth()] &= ~(1 << (y % 8));
	}
}

void ssd1306_DrawProgressBar(uint16_t x, uint16_t y, uint16_t width, uint16_t height, uint8_t progress, ssd1306_color_e_t color)
{
	uint16_t radius = height / 2;
	uint16_t xRadius = x + radius;
	uint16_t yRadius = y + radius;
	uint16_t doubleRadius = 2 * radius;
	uint16_t innerRadius = radius - 2;

	ssd1306_SetColor(White);
	ssd1306_DrawCircleQuads(xRadius, yRadius, radius, 0x06, color);
	ssd1306_DrawLine(xRadius, y, width - doubleRadius + 1, y, color);
	ssd1306_DrawLine(xRadius, y + height, width - doubleRadius + 1, y + height, color);
	ssd1306_DrawCircleQuads(x + width - radius, yRadius, radius, 0x09, color);

	uint16_t maxProgressWidth = (width - doubleRadius + 1) * progress / 100;

	ssd1306_FillCircle(xRadius, yRadius, innerRadius, color);
	ssd1306_FillRectangle(xRadius + 1, y + 2, maxProgressWidth, height - 3, color);
	ssd1306_FillCircle(xRadius + maxProgressWidth, yRadius, innerRadius, color);
}

void ssd1306_SetCursor(uint8_t x, uint8_t y)
{
	lcd_oled.currentX = x;
	lcd_oled.currentY = y;
}

static void ssd1306_WriteCommand(uint8_t command)
{
#ifdef USE_DMA
	while(HAL_I2C_GetState(&SSD1306_I2C_PORT) != HAL_I2C_STATE_READY);
	HAL_I2C_Mem_Write_DMA(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &command, 1);
#else
	HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &command, 1, 10);
#endif
}

static void ssd1306_WriteData(uint8_t* data, uint16_t size)
{
#ifdef USE_DMA
	while(HAL_I2C_GetState(&SSD1306_I2C_PORT) != HAL_I2C_STATE_READY);
	HAL_I2C_Mem_Write_DMA(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, data, size);
#else
	HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, data, size, 100);
#endif
}
